--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <header role=”banner”>
   <h1>Birdwatching</h1> <!--HEADER (a)-->
-      <img src="/images/dove.png" alt="a simple dove logo"> <!--IMAGE SIDEBAR (e)-->
+      <img src="images/dove.png" alt="a simple dove logo"> <!--IMAGE SIDEBAR (e)-->
 
       <nav>
               <ul> <!--NAVIGATION (b)-->
