--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1>Birdwatching</h1> <!--HEADER (a)-->
             <img src="images/dove.png" alt="a simple dove logo"> <!--IMAGE SIDEBAR (e)-->
 
-            <nav>
+            <nav role="navigation">
                <ul> <!--NAVIGATION (b)-->
                   <li><span>Home</span></li>
                   <li><a href="#">Get started</a></li>
@@ -33,10 +33,10 @@
             </nav>
       </header>
       
-      <main>
+      <main role="main">
 
           
-          <h2>Welcom</h2>
+          <h2>Welcome</h2>
         <!--WELCOME MESSAGE (d)-->
           <p>Welcome to our fake birdwatching site. If this were a real site, it would be the ideal place to come to learn more about birdwatching, whether you are a beginner looking to learn how to get into birding, or an expert wanting to share ideas, tips, and photos with other like-minded people.</p>
 
